--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "react": "^18.3.1",
     "react-animated-weather": "^4.0.1",
+    "react-dom": "^18.3.1",
     "react-geolocated": "^4.1.2",
     "react-live-clock": "^6.1.22",
     "react-router-dom": "^6.23.1",
+    "react-scripts": "5.0.1",
     "react-skycons": "^0.8.8",
-    "skycons": "^1.0.0"
+    "skycons": "^1.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
