--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env.development
-PUBLIC_URL=http://localhost:3000
+# PUBLIC_URL=http://localhost:3000
 
 # .env.production
-# PUBLIC_URL=https://yourproductiondomain.com
+PUBLIC_URL=https://weather-app-react-smoky.vercel.app/
 
 API_KEY = "002b46e5178c58505a41b01193081e07"
